--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
     "react-native": "0.81.5",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~4.1.1",
