--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "jest": {
     "preset": "jest-expo",
     "transformIgnorePatterns": [
-    "node_modules/(?!(?:.pnpm/)?((jest-)?react-native|@react-native(-community)?|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg))"
-  ]
+      "node_modules/(?!(?:.pnpm/)?((jest-)?react-native|@react-native(-community)?|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg))"
+    ]
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
@@ -40,7 +40,6 @@
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.9",
     "jest": "~29.7.0",
-    "jest-expo": "~54.0.13",
     "lucide-react-native": "^0.552.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -63,6 +62,7 @@
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "jest": "^30.2.0",
+    "jest-expo": "^54.0.13",
     "ts-jest": "^29.4.5",
     "typescript": "~5.9.2"
   },
