--- a/.maestro/utils/logout.yml
+++ b/.maestro/utils/logout.yml
@@ -2,6 +2,6 @@ appId: com.fuxi.vitra
 ---
 # Logout
 # Este fluxo começa na tela Home
-- tapOn: "Perfil" # Assumindo que este é o texto/id da aba de perfil
+- tapOn: "" # Clica diretamente no caractere Unicode do ícone de perfil
 - tapOn: "Sair da minha conta"
 - assertVisible: "Entrar"
