--- a/.maestro/utils/cadastro-pesquisador.yml
+++ b/.maestro/utils/cadastro-pesquisador.yml
@@ -8,11 +8,11 @@ appId: com.fuxi.vitra
 # Preenche o formulário clicando em cada campo
 - tapOn:
     text: "Seu nome"
-- inputText: "John"
+- inputText: "${NOME}"
 
 - tapOn:
     text: "Seu sobrenome"
-- inputText: "Doe"
+- inputText: "${SOBRENOME}"
 
 - tapOn:
     text: "exemplo@unb.br"
