--- a/.maestro/researcher_edit_project.yml
+++ b/.maestro/researcher_edit_project.yml
@@ -60,3 +60,10 @@ env:
 - assertVisible: "Projeto atualizado com sucesso."
 - tapOn: "OK"
 - assertVisible: "${NOME_PROJETO} (editado)" # Confirma que o novo título aparece na lista
+
+# 6. Navega de volta para o perfil
+- tapOn: "" # Ícone de Perfil
+
+# 7. Volta para a tela inicial
+- assertVisible: "Sair da minha conta"
+- tapOn: "" # Ícone de Casa
